# unified-search-mcp-server

./: Dockerfile  Dockerfile.backup  env-example.txt  github-actions.txt  install.py  license.txt  mcp.json  pyproject.toml  readme-ko.md  readme.md  requirements.txt  run_local.bat  run_local.sh  smithery.yaml  smithery.yml  smithery_server.py  test.py  test_http.py  test_local.py  unified_search_server.py
src/: mcp_server.py
src/cache/: __init__.py
src/config/: __init__.py
src/models/: __init__.py  errors.py  search.py
src/monitoring/: health.py
src/services/: __init__.py  base.py  youtube.py
src/utils/: logging.py
tests/: conftest.py  test_services.py
unified-search-mcp-server/: Dockerfile  LICENSE  build.sh  readme.md  smithery.yaml
unified-search-mcp-server/src/: __init__.py  mcp_server.py
unified-search-mcp-server/src/cache/: decorators.py  manager.py
unified-search-mcp-server/src/config/: security.py  settings.py
unified-search-mcp-server/src/monitoring/: __init__.py  metrics.py
unified-search-mcp-server/src/services/: scholar.py  unified.py  web.py
unified-search-mcp-server/src/utils/: __init__.py  rate_limiter.py
unified-search-mcp-server/tests/: __init__.py  test_basic.py
